KOGITO-6016 JIT executor to support multiple DMN resources (#1043)
* KOGITO-6016 evaluation multiple models support

* .

* with schema

* with validation

* refactoring for multiple XAI

* test XAI with multiple models

* with native image tests

* minor alignments and readme update

* refactorings

* refactorings

* refactorings